upgraded for cogra 2

--- a/engine.cfg
+++ b/engine.cfg
@@ -14,6 +14,12 @@ global="*res://scripts/global.gd"
 stretch_mode="2d"
 stretch_aspect="keep"
 
+[input]
+
+ui_accept=[key(Return), key(Enter), key(Space), jbutton(0, 0), key(Shift)]
+ui_select=[jbutton(0, 3), key(Control)]
+ui_cancel=[jbutton(0, 1), key(Escape)]
+
 [physics_2d]
 
 motion_fix_enabled=true
